# Imajin

./: .gitignore  README.md  pyproject.toml
docs/: PROJECT_PLAN.md
docs/specs/: phase2_core_cell_analysis.md  phase3_experiment_batch_reporting.md  phase4_execution_workflow_ui.md  phase5_project_persistence.md  phase6_visualization_qc_review.md  phase6b_neural_process_analysis.md  phase7_analysis_methods_expansion.md  phase8_distribution_onboarding.md  phase9_plugin_extension_architecture.md
docs/superpowers/plans/: 2026-05-02-channel-metadata-refactor.md  2026-05-02-phase3-experiment-batch.md
src/imajin/: __init__.py  cli.py  config.py  napari.yaml  project.py
src/imajin/agent/: context.py  execution.py  prompts.py  provenance.py  qt_dispatch.py  qt_tool_runner.py  runner.py  state.py  vision.py
src/imajin/io/: __init__.py  channel_metadata.py  czi.py  dataset.py  loader.py  lsm.py  memory.py  napari_reader.py  ome.py
src/imajin/tools/: __init__.py  channels.py  (+16 more)
tests/: conftest.py  test_anthropic_integration.py  test_chat_dock_phase3.py  test_chat_transcript.py  test_cli.py  test_config_settings.py  test_execution_service.py  test_io_channel_metadata.py  test_io_loader.py  test_io_lsm.py  test_job_dock.py  test_manual_dock.py  test_napari_reader.py  test_ollama_helper.py  test_openai_compat_inline_parser.py  test_phase2_workflow.py  test_phase3_experiment.py  test_project_persistence.py  test_provider_status.py  test_providers_translation.py  test_qc_dock.py  test_qt_tool_runner.py  test_runner.py  test_subagent_neural_tracer.py  test_subagent_report_writer.py  test_table_dock.py  test_tool_registry.py  test_tools_channels.py  test_tools_coloc.py  test_tools_experiment.py  test_tools_files.py  test_tools_measure.py  test_tools_preprocess.py  test_tools_qc.py  test_tools_report.py  test_tools_segment.py  test_tools_trace.py  test_tools_track.py  test_tools_view.py  test_ui_display.py  (+1 more)
(+21 files in other folders)
